#
# Copyright 2012-2020 CNRS-UM LIRMM, CNRS-AIST JRL
#
add_executable(AutoDiffTest AutoDiffTest.cpp)
add_executable(ConversionsTest ConversionsTest.cpp)
add_executable(InertiaTest InertiaTest.cpp)
add_executable(LogDiffTest LogDiffTest.cpp)
add_executable(PTransformBench PTransformBench.cpp)
add_executable(PTransformTest PTransformTest.cpp)
add_executable(VectorTest VectorTest.cpp)