<?xml version="1.0"?>
<package format="3">
  <name>rdl</name>
  <version>5.0.0</version>
  <description>The rdl meta-package</description>

  <maintainer email="jlack1987@gmail.com">jordan</maintainer>

  <license>zlib</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rdl_dynamics</exec_depend>
  <exec_depend>rdl_benchmark</exec_depend>
  <exec_depend>rdl_urdfreader</exec_depend>
  <exec_depend>rdl_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
