<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rdl_benchmark</name>
  <version>5.0.0</version>
  <description>The rdl_benchmark package</description>

  <maintainer email="jlack1987@gmail.com">jordan</maintainer>

  <license>zlib</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rdl_dynamics</depend>
  <depend>rdl_urdfreader</depend>
  <depend>boost</depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_lint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
