<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rdl_dynamics</name>
  <version>5.0.0</version>
  <description>The rdl_dynamics package</description>

  <maintainer email="jlack1987@gmail.com">jordan</maintainer>

  <license>zlib</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>eigen3_cmake_module</depend>
  <depend>eigen</depend>
  <!-- Doxygen and graphviz are actually doc. depends, but the <doc_depend> tag is ignored by rosdep, so using regular <depend> for now. -->
  <depend>doxygen</depend>
  <depend>graphviz</depend>
  <depend>boost</depend>
  <depend>rclcpp</depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_lint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
